--- a/README
+++ b/README
@@ -1,28 +1,8 @@
-- environment
-    $ uname -a
-    Darwin hiroki-mac.local 19.5.0 Darwin Kernel Version 19.5.0: Tue May 26 20:41:44 PDT 2020; root:xnu-6153.121.2~2/RELEASE_X86_64 x86_64
-
-    $ qemu-system-i386 --version
-    QEMU emulator version 4.2.0
-    Copyright (c) 2003-2019 Fabrice Bellard and the QEMU Project developers
-
-    $ nasm -v
-    NASM version 2.14.02 compiled on Sep 28 2019
-
-    !! original gcc, ld on the macOS
-    $ gcc -v
-    Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/4.2.1
-    Apple clang version 11.0.3 (clang-1103.0.32.29)
-    Target: x86_64-apple-darwin19.5.0
-    Thread model: posix
-    InstalledDir: /Library/Developer/CommandLineTools/usr/bin
-
-    $ ld -v
-    @(#)PROGRAM:ld  PROJECT:ld64-556.5
-    BUILD 19:04:29 Mar  6 2020
-    configured to support archs: armv6 armv7 armv7s arm64 arm64e arm64_32 i386 x86_64 x86_64h armv6m armv7k armv7m armv7em
-    LTO support using: LLVM version 11.0.3, (clang-1103.0.32.29) (static support for 26, runtime is 26)
-    TAPI support using: Apple TAPI version 11.0.0 (tapi-1100.0.11)
+- build environment
+```
+$ sudo docker build -t hios ./ 
+$ docker run -it --rm --name hios -v `pwd`:/hios hios
+```
 
 - reference
     - How to implement without using tools provided in the OS book
