--- a/README
+++ b/README
@@ -2,6 +2,7 @@
 ```
 $ sudo docker build -t hios ./ 
 $ docker run -it --rm --name hios -v `pwd`:/hios hios
+TODO: use docker-compose
 ```
 
 - reference
